# voting

./: .gitignore  README-cryptography.md  README.md  build.sh  manage.py  pyproject.toml
api/: app.py
government_provider/: provider.py  urls.py  views.py
gpg/: admin.py  apps.py  fields.py  forms.py  models.py  settings.py  urls.py  utils.py  views.py
gpg/migrations/: 0001_initial.py  0002_alter_gpgkey_verification_message_and_more.py
gpg/templates/gpg/: public_keys.html  verify_key.html
project/: common_views.py  middleware.py  settings.py  urls.py  utils.py
voting/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
voting/migrations/: 0001_initial.py  0002_delete_gpgkey.py  0003_auto_20250831_1627.py  0004_auto_20250831_1627.py  0005_remove_ballot_ballot_id_remove_ballot_checksum_and_more.py  0006_query_remove_customuser_email_customuser_country.py  0007_servercryptoconfig_remove_tokenattribution_user_and_more.py  0008_delete_servercryptoconfig_vote_private_key_pem_and_more.py  0009_customuser_uuid_alter_ballot_result.py  0010_auto_20260103_1011.py  0011_auto_20260103_1011.py
voting/static/: style.css
voting/static/voting/: crypto.js  incognito.js  submit_vote.js
voting/templates/: base.html  home.html
voting/templates/voting/: ballot_list.html  get_token.html  help_protocol.html  results.html  submit_vote.html  submit_vote_old.html  token.html  token_list.html  vote_directory.html  vote_list.html
